# ner_for_epadd

./: .gitignore  DictDataset.py  ListDataset.py  README.md  experimenting.ipynb  ner_for_epadd.py  pyproject.toml  utils.py
src/ner_for_epadd/: EmailDataset.py  __init__.py  __main__.py  extract_text.py  utils.py
