[project]
name = "ner_for_epadd"
version = "0.1.0"
description = "Simple .mbox parsing + NER with custom huggingface transformers model"
authors = [
    {name = "Tita", email = "tita.enstad@nb.no"},
]
dependencies = ["transformers[torch]>=4.49.0", "torch>=2.6.0", "tqdm>=4.67.1"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true
